--- a/package.json
+++ b/package.json
@@ -15,5 +15,12 @@
   "bugs": {
     "url": "https://github.com/hystolytc/tryout-01/issues"
   },
-  "homepage": "https://github.com/hystolytc/tryout-01#readme"
+  "homepage": "https://github.com/hystolytc/tryout-01#readme",
+  "dependencies": {
+    "express": "^4.15.2",
+    "express-graphql": "^0.6.4",
+    "graphql": "^0.9.2",
+    "socket.io": "^1.7.3",
+    "socket.io-client": "^1.7.3"
+  }
 }
